[gd_scene load_steps=9 format=3 uid="uid://dp54e51om4wua"]

[ext_resource type="Texture2D" uid="uid://cbletp1utaw5f" path="res://assets/images/hall.png" id="1_bg3ww"]
[ext_resource type="Script" uid="uid://duquwxwtsbpjg" path="res://scripts/versus.gd" id="1_tm2f6"]
[ext_resource type="PackedScene" uid="uid://chx3wudkvthsd" path="res://scenes/opp_card.tscn" id="2_kbxaj"]
[ext_resource type="FontFile" uid="uid://vp1knco0la0y" path="res://assets/fonts/BadComic-Regular.ttf" id="3_tm2f6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ncfud"]
texture = ExtResource("1_bg3ww")
modulate_color = Color(0.564962, 0.564962, 0.564962, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kbxaj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tm2f6"]
bg_color = Color(0.371803, 0.00621317, 0.0803069, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 18
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0
shadow_size = 5
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i78ed"]
bg_color = Color(0.501961, 0.0117647, 0.121569, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 18
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0
shadow_size = 5
shadow_offset = Vector2(0, 1)

[node name="versus" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tm2f6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ncfud")

[node name="FighterCard" parent="." instance=ExtResource("2_kbxaj")]
layout_mode = 1
offset_left = 1.0
offset_top = 148.0
offset_right = -796.0
offset_bottom = -113.0

[node name="OppCard" parent="." instance=ExtResource("2_kbxaj")]
layout_mode = 1
offset_left = 792.0
offset_top = 148.0
offset_right = -5.0
offset_bottom = -113.0

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -94.0
offset_right = 94.0
offset_bottom = 182.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_tm2f6")
theme_override_font_sizes/font_size = 151
text = "FIGHT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -91.0
offset_right = 94.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.678431, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_tm2f6")
theme_override_font_sizes/font_size = 151
text = "VS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FightButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -164.0
offset_right = 47.0
offset_bottom = -127.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_tm2f6")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_kbxaj")
theme_override_styles/hover = SubResource("StyleBoxFlat_tm2f6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i78ed")
theme_override_styles/normal = SubResource("StyleBoxFlat_i78ed")
text = "FIGHT"

[node name="ButtonReturn" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 127.0
offset_bottom = 81.0
text = "Back"

[connection signal="pressed" from="FightButton" to="." method="_on_fight_button_pressed"]
[connection signal="pressed" from="ButtonReturn" to="." method="_on_button_return_pressed"]
